fix: the style of satisfaction evaluation dialog was covered by chat window

--- a/static/css/src/im.css
+++ b/static/css/src/im.css
@@ -968,7 +968,6 @@ body .easemobWidget-offline-bg {
     pop dialog
 */
 .easemobWidget-dialog {
-    z-index: 3;
     position: absolute;
     width: 320px;
     height: 380px;
@@ -1224,9 +1223,10 @@ body .easemobWidget-offline-bg {
     font-size: 15px;
 }
 .easemobWidgetWrapper-mobile .easemobWidget-satisfaction-dialog {
+	z-index: 3;
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     margin: 0;
